--- a/index.qmd
+++ b/index.qmd
@@ -1,7 +1,14 @@
 # Preface {.unnumbered}
 
 This website shows the theories and empirics of risk-sharing models.
+
+Here, by risk-sharing, I consider studies trying to understand the relationships between consumption and income and mechanisms to reduce the correlation through sharing income risks with others.
+The seminal paper in this literature is @Townsend1994, and I introduce studies before and after this paper and try to relate each other.
+@Fafchamps2011 reviews this literature extensively, and @Ligon2016 provides a brief (and super awesome!) review of this literature.
+
 I made this website primarily for my self-learning, but I hope somebody finds the information here interesting.
 Any errors are my own, and please report misinformation or wrong statement if you find any.
 
-GitHub: https://github.com/mizuhirosuzuki/risk_sharing
+GitHub: [https://github.com/mizuhirosuzuki/risk_sharing](https://github.com/mizuhirosuzuki/risk_sharing)
+
+## References
