--- a/coate_ravallion_reproduction.qmd
+++ b/coate_ravallion_reproduction.qmd
@@ -1,5 +1,38 @@
 # Computational reproduction of Coate and Ravallion (1993)
 
+## Model in @coate1993reciprocity
+
+Their framework is based on an infinite-period repeated game: in each period, players either follow a transfer schedule or renege and will stay in autarky forever. Under symmetric income distribution, they compare first-best transfers under full risk-sharing and best implementable transfers (best in the sense that the transfers that maximize the expected utilities).
+
+The problem considered in the paper is to maximize the average expected utility of a household (by symmetry, a transfer schedule that maximizes the average expected utility of one household maximizes that of the other household), subject to the following *implementability constraints*:
+
+```{=tex}
+\begin{align*}
+  u(y_i) - u(y_i - \theta_{ij}) &\le (v^A(\Theta) - \overline{v}) / r \quad \text{for all } (i, j) \\
+  u(y_j) - u(y_j + \theta_{ij}) &\le (v^B(\Theta) - \overline{v}) / r \quad \text{for all } (i, j),
+\end{align*}
+```
+where $y$ is income, $\theta_{ij}$ is the transfer from A to B when the state is $(i, j)$, $\Theta$ is the entire transfer schedule, or *informal insurance arrangement*, $\overline{v}$ is the value under autarky, and $r$ is the discount rate. Per-period expected utilities of A and B, $v^A(\Theta)$ and $v^B(\Theta)$, under the informal insurance arrangement $\Theta$ are
+
+```{=tex}
+\begin{align*}
+  v^A(\Theta) = \sum_{i} \sum_{j} \pi_{ij} u(y_i - \theta_{ij}), \\
+  v^B(\Theta) = \sum_{i} \sum_{j} \pi_{ij} u(y_j + \theta_{ij}),
+\end{align*}
+```
+where $\pi_{ij}$ is a probability of the state $(i, j)$.
+
+To characterize the transfers under those constraints, the authors define the function $f(y, w)$ which implicitly satisfies $u(y) - u(y - f) = w$. The function represents the maximal amount of income that can be taken from a household without violating the implementability constraints where the cost of defection is $w$. With this, they derive that
+```{=tex}
+\begin{equation*}
+  \theta_{ij}^* = \min \{\widehat{\theta}_{ij}, f(y_i, (v(\theta^*) - \overline{v}) / r) \}.
+\end{equation*}
+```
+Here, $\theta^*$ is the contract which results in the highest average expected utility subject to the implementability constraints, and $\widehat{\theta}$ is the transfer schedule under the full risk-sharing.
+Intuitively, this means that, as long as the implementability constraints are not violated, the transfer schedule coincides with the one under full risk-sharing, but otherwise, as much money as possible is transferred so that the constraints are not violated.
+
+Furthermore, they examine (i) how the best implementable (ie. under the implementability constraints) insurance arrangement and the full risk-sharing insurance arrangement differ, and (ii) how the best implementable insurance arrangement changes with exogenous variables of the model (discount rate and correlation in income realizations). To (i), they find, for example, that the transfers under the implementability constraints do depend on not the level of incomes, unlike the first-best contracts where transfers depend only on the income *difference* between households. Regarding the comparative static properties as in the question (ii), they demonstrate smaller transfers among less patient househodls and also in situations where income realizations are highly correlated.
+
 ## Numerical exercise
 
 I conduct a numerical exercise to replicate Table 3 in @coate1993reciprocity.
