--- a/static_limited_commitment.qmd
+++ b/static_limited_commitment.qmd
@@ -1,37 +1,54 @@
 # Static limited-commitment model
 
-Here, I explain the static limited-commitment model. The model is called *static* since the transfer schedule only depends on the current state if the past transfer schedule has been followed. This is in contrast to the *dynamic* limited commitment model as in, for example, @ligon2002informal.
+In a *static* limited commitment model, transfer rules are not allowed to depend on past states.
+The repeated game is used in the analysis, and @coate1993reciprocity provides a simple and clear framework.
 
-## Model in @coate1993reciprocity
+## @Kimball1988
 
-Their framework is based on an infinite-period repeated game: in each period, players either follow a transfer schedule or renege and will stay in autarky forever. Under symmetric income distribution, they compare first-best transfers under full risk-sharing and best implementable transfers (best in the sense that the transfers that maximize the expected utilities).
+In this paper, he provides a framework for risk-sharing with limited commitment and conducts numerical analyses to see (i) under what parameter values enforceability constraints are satisfied (and hence some form of transfers happens), and (ii) under what parameter values full risk-sharing is achieved.
+Interestingly, in his formulation of the problem, he does not use the repeated game but instead uses the dynamic optimization, which looks closer to the dynamic limited commitment model (introduced below) in which transfers can depend on past states.
+However, Kimball explicitly rules out the possibility of consumption depending on the past states (p.226), which makes the framework a static limited commitment model.
+
+The paper says Table 1 shows that the enforceability constraints tend to be satisfied with reasonable parameters and Table 3 shows that full risk-sharing can be achieved with reasonable parameters.
+I am not sure (i) what the expression for $W(P)$ on p.226 is, (ii) how to derive (6), and (iii) how to get numbers on Table 3.
+
+The main motivation in this paper is to explain why farmers had scattered plots in Medieval England.
+Some say this is for insurance (as a form of income diversification), but Kimball argues that this is unlikely since, as shown in the paper, risk-sharing among farmers as informal insurance can be sustained.
+Thus, he argues that, rather than relying on the costly income diversification (eg. travel time), farmers should use risk-sharing for insurance.
+
+## @coate1993reciprocity
+
+Like @Kimball1988, this paper also considers a risk-sharing model with limited commitment model.
+Unlike @Kimball1988, however, their framework is based on an infinite-period repeated game:
+in each period, players either follow a transfer schedule or renege and will stay in autarky forever.
+Under symmetric income distribution, they compare first-best transfers under full risk-sharing and best implementable transfers (best in the sense that the transfers that maximize the expected utilities).
 
 The problem considered in the paper is to maximize the average expected utility of a household (by symmetry, a transfer schedule that maximizes the average expected utility of one household maximizes that of the other household), subject to the following *implementability constraints*:
 
-```{=tex}
 \begin{align*}
   u(y_i) - u(y_i - \theta_{ij}) &\le (v^A(\Theta) - \overline{v}) / r \quad \text{for all } (i, j) \\
   u(y_j) - u(y_j + \theta_{ij}) &\le (v^B(\Theta) - \overline{v}) / r \quad \text{for all } (i, j),
 \end{align*}
-```
-where $y$ is income, $\theta_{ij}$ is the transfer from A to B when the state is $(i, j)$, $\Theta$ is the entire transfer schedule, or *informal insurance arrangement*, $\overline{v}$ is the value under autarky, and $r$ is the discount rate. Per-period expected utilities of A and B, $v^A(\Theta)$ and $v^B(\Theta)$, under the informal insurance arrangement $\Theta$ are
 
-```{=tex}
-\begin{align*}
-  v^A(\Theta) = \sum_{i} \sum_{j} \pi_{ij} u(y_i - \theta_{ij}), \\
-  v^B(\Theta) = \sum_{i} \sum_{j} \pi_{ij} u(y_j + \theta_{ij}),
-\end{align*}
-```
-where $\pi_{ij}$ is a probability of the state $(i, j)$.
+where $y$ is income, $\theta_{ij}$ is the transfer from A to B when the state is $(i, j)$, $\Theta$ is the entire transfer schedule, or *informal insurance arrangement*, $\overline{v}$ is the value under autarky, and $r$ is the discount rate.
+Using this framework, they examine (i) how the best implementable (ie. under the implementability constraints) insurance arrangement and the full risk-sharing insurance arrangement differ, and (ii) how the best implementable insurance arrangement changes with exogenous variables of the model (discount rate and correlation in income realizations).
+Also, they conduct numerical exercises to show how changes in exogenous variables affect the insurance arrangement.
+The numerical exercises 
 
-To characterize the transfers under those constraints, the authors define the function $f(y, w)$ which implicitly satisfies $u(y) - u(y - f) = w$. The function represents the maximal amount of income that can be taken from a household without violating the implementability constraints where the cost of defection is $w$. With this, they derive that
-```{=tex}
-\begin{equation*}
-  \theta_{ij}^* = \min \{\widehat{\theta}_{ij}, f(y_i, (v(\theta^*) - \overline{v}) / r) \}.
-\end{equation*}
-```
-Here, $\theta^*$ is the contract which results in the highest average expected utility subject to the implementability constraints, and $\widehat{\theta}$ is the transfer schedule under the full risk-sharing.
-Intuitively, this means that, as long as the implementability constraints are not violated, the transfer schedule coincides with the one under full risk-sharing, but otherwise, as much money as possible is transferred so that the constraints are not violated.
+As suggestions for future research (I mean, "future" from their perspective), they provide three possible directions to extend their model:
 
-Furthermore, they examine (i) how the best implementable (ie. under the implementability constraints) insurance arrangement and the full risk-sharing insurance arrangement differ, and (ii) how the best implementable insurance arrangement changes with exogenous variables of the model (discount rate and correlation in income realizations). To (i), they find, for example, that the transfers under the implementability constraints do depend on not the level of incomes, unlike the first-best contracts where transfers depend only on the income *difference* between households. Regarding the comparative static properties as in the question (ii), they demonstrate smaller transfers among less patient househodls and also in situations where income realizations are highly correlated.
+1. to allow non-stationary insurance arrangements, which can depend on both current and past income realizations;
+2. to allow households to save;
+3. to allow households' income to depend on its work effort which others in the community cannot observe.
 
+Interestingly, all of these three extensions have been achieved by later works:
+(1) by, for example, @ligon2002informal, (2) by, for example, @Ligon2000, and (3) by, for example, XXX.
+
+## Difference between @Kimball1988 and @coate1993reciprocity
+
+The main difference between this paper and @Kimball1988 is that, 
+
+- while @Kimball1988 identifies the conditions (i) for risk-sharing institutions to exist and (ii) for full risk-sharing to be achieved,
+- @coate1993reciprocity investigates the properties of the best implementable insurance arrangement (ie. how this is different from the insurance arrangement under full risk-sharing and how this arrangement changes as exogenous variables vary).
+
+## References
