--- a/references.bib
+++ b/references.bib
@@ -488,3 +488,19 @@ year = {2006}
   year={2001},
   publisher={JSTOR}
 }
+
+
+@book{deaton1992understanding,
+  title={Understanding consumption},
+  author={Deaton, Angus},
+  year={1992},
+  publisher={Oxford University Press}
+}
+
+@book{bardhan1999development,
+  title={Development microeconomics},
+  author={Bardhan, Pranab and Udry, Christopher},
+  year={1999},
+  publisher={OUP Oxford}
+}
+
